fix: Consolidate some layout gaps

--- a/src/app/pages/multi-calc/multi-calc-mobile/multi-calc-mobile.component.scss
+++ b/src/app/pages/multi-calc/multi-calc-mobile/multi-calc-mobile.component.scss
@@ -69,7 +69,7 @@
   align-items: center;
   justify-content: space-between;
   gap: 0.5em;
-  padding: 0.5em 0.75em;
+  padding: 1em 0.75em 0.5em 0.75em;
   background-color: var(--background);
 }
 
